Unify the profile picture UI component
