# services/api/openapi-zkorum.json
@@ -464,6 +464,48 @@
                 }
             }
         },
+        "/api/v1/user/fetch-user-profile": {
+            "post": {
+                "responses": {
+                    "200": {
+                        "description": "Default Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "commentCount": {
+                                            "type": "number",
+                                            "minimum": 0
+                                        },
+                                        "postCount": {
+                                            "type": "number",
+                                            "minimum": 0
+                                        },
+                                        "createdAt": {
+                                            "type": "string",
+                                            "format": "date-time"
+                                        },
+                                        "userName": {
+                                            "type": "string",
+                                            "maxLength": 23,
+                                            "minLength": 3
+                                        }
+                                    },
+                                    "required": [
+                                        "commentCount",
+                                        "postCount",
+                                        "createdAt",
+                                        "userName"
+                                    ],
+                                    "additionalProperties": false
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/voting/fetch-user-votes-for-post-slug-id": {
             "post": {
                 "requestBody": {
